# NAS-SYSTEM

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
src/: api.rs  config.rs  crypto.rs  davfs.rs  directory.rs  main.rs  network.rs  router.rs  session.rs  truenas.rs  vault.rs
truenas_app/: ix_values.yaml
