[package]
name = "ghost-nas"
version = "0.1.0"
edition = "2021"
description = "GHOST NAS Daemon with TrueNAS SCALE Middleware Integration"

[[bin]]
name = "ghost-nas"
path = "src/main.rs"

[dependencies]
# --- GHOST Protocol Core ---
ml-kem = "0.2"
tokio = { version = "1", features = ["full", "net"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# --- Cryptography ---
ring = "0.17"
ed25519-dalek = "2"
x25519-dalek = "2"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
reed-solomon-erasure = "6"
sha2 = "0.10"
blake3 = { version = "1", features = ["pure"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

# --- HTTP / API Server (TrueNAS Middleware Bridge) ---
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.4"

# --- System & Platform ---
sysinfo = "0.31"
signal-hook = "0.3"
nix = { version = "0.29", features = ["mman", "signal"] }

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# --- CLI & Config ---
clap = { version = "4", features = ["derive"] }
toml = "0.8"
directories = "5"
if-addrs = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
